Switch to pixi with multi-env support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,74 +8,41 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-defaults:
-  run:
-    shell: bash -el {0}
-
 jobs:
   linux-unittests:
-    name: >-
-      Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-      ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
+    name: Unit tests - ${{ matrix.env }}
     timeout-minutes: 15
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.1', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.2', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: 'scikit-learn=1.3', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=3.2' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=3.3' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=4.0' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=4.1' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=4.2' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: 'lightgbm=4.3' }
-          - { PYTHON_VERSION: '3.8', SKLEARN_VERSION: '', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.9', SKLEARN_VERSION: '', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.10', SKLEARN_VERSION: '', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.11', SKLEARN_VERSION: '', LGBM_VERSION: '' }
-          - { PYTHON_VERSION: '3.12', SKLEARN_VERSION: '', LGBM_VERSION: '' }
+        env:
+          - skl11
+          - skl12
+          - skl13
+          - lgbm32
+          - lgbm33
+          - lgbm40
+          - lgbm41
+          - lgbm42
+          - lgbm43
+          - py38
+          - py39
+          - py310
+          - py311
+          - py312
     steps:
       - uses: actions/checkout@v4
       - name: Set up conda env
-        uses: mamba-org/setup-micromamba@v1
+        uses: prefix-dev/setup-pixi@v0.5.0
         with:
-          cache-environment: true
-          environment-file: environment-deprecated.yml
-          create-args: >-
-            python=${{ matrix.PYTHON_VERSION }}
-            pytest-md
-            pytest-emoji
-            ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
+          environments: ${{ matrix.env }}
       - name: Install repository
-        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
+        run: pixi run -e ${{ matrix.env }} postinstall
       - name: Run unittests
         uses: pavelzw/pytest-action@v2
         with:
-          custom-arguments: ${{ matrix.SKLEARN_VERSION != '' && '-k sklearn' || '' }}${{ matrix.LGBM_VERSION != '' && ' -k lgbm' || '' }}
-          report-title: >-
-            Unit tests - Python ${{ matrix.PYTHON_VERSION }}
-            ${{ matrix.SKLEARN_VERSION }}${{ matrix.LGBM_VERSION }}
-
-  linux-unittests-pixi:
-    name: Unit tests Pixi
-    timeout-minutes: 15
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v4
-      - uses: prefix-dev/setup-pixi@v0.4.1
-      - name: Install environment
-        run: |
-          pixi run postinstall
-      - name: Run unittests
-        uses: pavelzw/pytest-action@v2
-        with:
-          custom-pytest: pixi run test
-          report-title: Unit tests Linux Pixi
+          report-title: Unit tests - ${{ matrix.env }}
 
   pre-commit:  # todo switch to pre-commit.ci
     name: "Pre-commit checks"
@@ -84,12 +51,9 @@ jobs:
     steps:
       - name: Checkout branch
         uses: actions/checkout@v4
-      - name: Install Python 3.11
-        uses: actions/setup-python@v5
+      - uses: quantco/pre-commit-conda@v1
         with:
-          python-version: 3.11
-      - name: Run pre-commit checks
-        uses: pre-commit/action@v3.0.0
+          python-version: '3.8'
 
   lint-workflow-files:
     name: "Lint workflow files"
