--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -14,14 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up conda env
-        uses: mamba-org/setup-micromamba@v1
+        uses: prefix-dev/setup-pixi@v0.5.0
         with:
-          environment-file: environment-deprecated.yml
-          cache-environment: true
-          create-args: python=3.11
+          environments: py312
       - name: Install repository
-        run: python -m pip install --no-build-isolation --no-deps --disable-pip-version-check -e .
-        shell: bash -el {0}
+        run: pixi run -e py312 postinstall
       - name: Cache models
         uses: actions/cache@v3
         env:
@@ -30,13 +27,12 @@ jobs:
           path: examples/benchmark_models
           key: models-${{ hashFiles('benchmark.py', '.github/workflows/benchmark.yml') }}
       - name: Run benchmark
-        shell: bash -el {0}
         run: |
           python benchmark.py
           echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> result.md
           cat benchmark.md >> result.md
+        shell: pixi run bash {0}
       - name: Comment on PR
-        # thollander/actions-comment-pull-request is not whitelisted
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
         with:
