--- a/pixi.toml
+++ b/pixi.toml
@@ -7,18 +7,71 @@ platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "linux-ppc64le"
 
 [tasks]
 postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."
-test = "pytest"
-lint = "pre-commit run -a"
 
 [dependencies]
 python = ">=3.8"
-pip = "*"
-lightgbm = ">=3.2,<4.4"
 numpy = "*"
-pre-commit = "*"
-pandas = "*"
-scikit-learn = ">=1.1.0,<1.4"
-hatch = "*"
+
+[host-dependencies]
+pip = "*"
+hatchling = "*"
+
+[feature.test.dependencies]
+lightgbm = ">=3.2,<4.4"
+scikit-learn = ">=1.1,<1.4"
 pytest = ">=7.0"
 pytest-md = "*"
 pytest-emoji = "*"
+pandas = "*"
+[feature.test.tasks]
+test = "pytest"
+
+[feature.lgbm32.dependencies]
+lightgbm = ">=3.2,<3.3"
+[feature.lgbm33.dependencies]
+lightgbm = ">=3.3,<3.4"
+[feature.lgbm40.dependencies]
+lightgbm = ">=4.0,<4.1"
+[feature.lgbm41.dependencies]
+lightgbm = ">=4.1,<4.2"
+[feature.lgbm42.dependencies]
+lightgbm = ">=4.2,<4.3"
+[feature.lgbm43.dependencies]
+lightgbm = ">=4.3,<4.4"
+[feature.skl11.dependencies]
+scikit-learn = ">=1.1,<1.2"
+[feature.skl12.dependencies]
+scikit-learn = ">=1.2,<1.3"
+[feature.skl13.dependencies]
+scikit-learn = ">=1.3,<1.4"
+[feature.py38.dependencies]
+python = ">=3.8,<3.9"
+[feature.py39.dependencies]
+python = ">=3.9,<3.10"
+[feature.py310.dependencies]
+python = ">=3.10,<3.11"
+[feature.py311.dependencies]
+python = ">=3.11,<3.12"
+[feature.py312.dependencies]
+python = ">=3.12,<3.13"
+
+[feature.lint.dependencies]
+pre-commit = "*"
+[feature.lint.tasks]
+lint = "pre-commit run -a"
+
+[environments]
+skl11 = ["py38", "skl11", "test"]
+skl12 = ["py38", "skl12", "test"]
+skl13 = ["py38", "skl13", "test"]
+lgbm32 = ["py38", "lgbm32", "test"]
+lgbm33 = ["py38", "lgbm33", "test"]
+lgbm40 = ["py38", "lgbm40", "test"]
+lgbm41 = ["py38", "lgbm41", "test"]
+lgbm42 = ["py38", "lgbm42", "test"]
+lgbm43 = ["py38", "lgbm43", "test"]
+py38 = ["py38", "test"]
+py39 = ["py39", "test"]
+py310 = ["py310", "test"]
+py311 = ["py311", "test"]
+py312 = ["py312", "test"]
