--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           - py312
     steps:
       - uses: actions/checkout@v4
-      - name: Set up conda env
+      - name: Set up pixi
         uses: prefix-dev/setup-pixi@v0.5.0
         with:
           environments: ${{ matrix.env }}
@@ -45,8 +45,8 @@ jobs:
           custom-pytest: pixi run test
           report-title: Unit tests - ${{ matrix.env }}
 
-  pre-commit:  # todo switch to pre-commit.ci
-    name: "Pre-commit checks"
+  pre-commit:
+    name: pre-commit checks
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
