--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -15,10 +15,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up conda env
         uses: prefix-dev/setup-pixi@v0.5.0
-        with:
-          environments: py312
       - name: Install repository
-        run: pixi run -e py312 postinstall
+        run: pixi run postinstall
       - name: Cache models
         uses: actions/cache@v4
         env:
@@ -31,7 +29,7 @@ jobs:
           python benchmark.py
           echo "_(benchmark **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_" >> result.md
           cat benchmark.md >> result.md
-        shell: pixi run -e py312 bash {0}
+        shell: pixi run bash {0}
       - name: Comment on PR
         uses: actions/github-script@v7
         if: github.event_name == 'pull_request'
