--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
           - skl11
           - skl12
           - skl13
+          - skl14
           - lgbm32
           - lgbm33
           - lgbm40
