--- a/pixi.toml
+++ b/pixi.toml
@@ -18,7 +18,7 @@ hatchling = "*"
 
 [feature.test.dependencies]
 lightgbm = ">=3.2,<4.4"
-scikit-learn = ">=1.1,<1.4"
+scikit-learn = ">=1.1,<1.5"
 pytest = ">=7.0"
 pytest-md = "*"
 pytest-emoji = "*"
@@ -44,6 +44,8 @@ scikit-learn = ">=1.1,<1.2"
 scikit-learn = ">=1.2,<1.3"
 [feature.skl13.dependencies]
 scikit-learn = ">=1.3,<1.4"
+[feature.skl14.dependencies]
+scikit-learn = ">=1.4,<1.5"
 [feature.py38.dependencies]
 python = ">=3.8,<3.9"
 [feature.py39.dependencies]
@@ -65,6 +67,7 @@ default = ["test"]
 skl11 = ["py38", "skl11", "test"]
 skl12 = ["py38", "skl12", "test"]
 skl13 = ["py38", "skl13", "test"]
+skl14 = ["py39", "skl14", "test"]
 lgbm32 = ["py38", "lgbm32", "test"]
 lgbm33 = ["py38", "lgbm33", "test"]
 lgbm40 = ["py38", "lgbm40", "test"]
