Add py.typed file and fix mypy, improve pre-commit configuration

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,42 @@
+exclude: ^\.copier-answers\.yml$
 repos:
-  - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.6.0
+  - repo: local
     hooks:
-      - id: check-yaml
+      # ruff
+      - id: ruff
+        name: ruff
+        entry: pixi run -e lint ruff check --fix --exit-non-zero-on-fix --force-exclude
+        language: system
+        types_or: [python, pyi]
+        require_serial: true
+      - id: ruff-format
+        name: ruff-format
+        entry: pixi run -e lint ruff format --force-exclude
+        language: system
+        types_or: [python, pyi]
+        require_serial: true
+      # mypy
+      - id: mypy
+        name: mypy
+        entry: pixi run -e default mypy --ignore-missing-imports --scripts-are-modules
+        language: system
+        types: [python]
+        require_serial: true
+      # pre-commit-hooks
+      - id: trailing-whitespace-fixer
+        name: trailing-whitespace-fixer
+        entry: pixi run -e lint trailing-whitespace-fixer
+        language: system
+        types: [text]
       - id: end-of-file-fixer
-      - id: trailing-whitespace
-      - id: check-toml
-  - repo: https://github.com/quantco/pre-commit-mirrors-ruff
-    rev: 0.4.3
-    hooks:
-      - id: ruff-conda
-      - id: ruff-format-conda
-  - repo: https://github.com/quantco/pre-commit-mirrors-mypy
-    rev: 1.10.0
-    hooks:
-      - id: mypy-conda
+        name: end-of-file-fixer
+        entry: pixi run -e lint end-of-file-fixer
+        language: system
+        types: [text]
+      # typos
+      - id: typos
+        name: typos
+        entry: pixi run -e lint typos --force-exclude
+        language: system
+        types: [text]
+        require_serial: true
