--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/checkout@v4
       - uses: quantco/pre-commit-conda@v1
         with:
-          python-version: '3.8'
+          python-version: "3.8"
 
   lint-workflow-files:
     name: "Lint workflow files"
