--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
       # mypy
       - id: mypy
         name: mypy
-        entry: pixi run -e default mypy --ignore-missing-imports --scripts-are-modules
+        entry: pixi run -e default mypy
         language: system
         types: [python]
         require_serial: true
