--- a/pixi.toml
+++ b/pixi.toml
@@ -1,9 +1,8 @@
 [project] # TODO: move to pyproject.toml once pixi supports it
 name = "slim-trees"
 description = "A python package for efficient pickling of ML models."
-authors = ["Pavel Zwerschke <pavelzw@gmail.com>"]
 channels = ["conda-forge"]
-platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "linux-ppc64le", "win-64"]
+platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]
 
 [tasks]
 postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."
@@ -23,6 +22,8 @@ pytest = ">=7.0"
 pytest-md = "*"
 pytest-emoji = "*"
 pandas = "*"
+mypy = "*"
+pandas-stubs = "*"
 [feature.test.tasks]
 test = "pytest"
 
@@ -59,8 +60,12 @@ python = ">=3.12,<3.13"
 
 [feature.lint.dependencies]
 pre-commit = "*"
+ruff = "*"
+pre-commit-hooks = "*"
+typos = "*"
 [feature.lint.tasks]
-lint = "pre-commit run -a"
+pre-commit-install = "pre-commit install"
+pre-commit-run = "pre-commit run -a"
 
 [environments]
 default = ["test"]
@@ -79,4 +84,4 @@ py39 = ["py39", "test"]
 py310 = ["py310", "test"]
 py311 = ["py311", "test"]
 py312 = ["py312", "test"]
-lint = ["lint"]
+lint = { features = ["lint"], no-default-feature = true }
