Add support for scikit-learn 1.5

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
           - skl12
           - skl13
           - skl14
+          - skl15
           - lgbm32
           - lgbm33
           - lgbm40
