--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,38 +7,28 @@ name = "slim-trees"
 description = "A python package for efficient pickling of ML models."
 version = "0.2.10"
 readme = "README.md"
-license = {file = "LICENSE"}
+license = { file = "LICENSE" }
 requires-python = ">=3.8"
-authors = [
-    { name = "Pavel Zwerschke", email = "pavel.zwerschke@quantco.com" },
-]
+authors = [{ name = "Pavel Zwerschke", email = "pavel.zwerschke@quantco.com" }]
 classifiers = [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
 ]
-dependencies = [
-    "numpy",
-]
+dependencies = ["numpy >=1,<3"]
 
 [project.optional-dependencies]
-lightgbm = [
-    "lightgbm >=3.2,<4.4",
-]
-scikit-learn = [
-    "scikit-learn >=1.1.0,<1.6",
-]
+lightgbm = ["lightgbm >=3.2,<4.4"]
+scikit-learn = ["scikit-learn >=1.1.0,<1.6"]
 
 [project.urls]
 Homepage = "https://github.com/quantco/slim-trees"
 
 [tool.hatch.build.targets.sdist]
-include = [
-    "/slim_trees",
-]
+include = ["/slim_trees"]
 
 [tool.ruff]
 line-length = 88
@@ -46,37 +36,38 @@ target-version = "py38"
 
 [tool.ruff.lint]
 select = [
-    # pyflakes
-    "F",
-    # pycodestyle
-    "E", "W",
-    # flake8-builtins
-    "A",
-    # flake8-bugbear
-    "B",
-    # flake8-comprehensions
-    "C4",
-    # flake8-simplify
-    "SIM",
-    # flake8-unused-arguments
-    "ARG",
-    # pylint
-    "PL",
-    # tidy
-    "TID",
-    # isort
-    "I",
-    # pep8-naming
-    "N",
-    # pyupgrade
-    "UP"
+  # pyflakes
+  "F",
+  # pycodestyle
+  "E",
+  "W",
+  # flake8-builtins
+  "A",
+  # flake8-bugbear
+  "B",
+  # flake8-comprehensions
+  "C4",
+  # flake8-simplify
+  "SIM",
+  # flake8-unused-arguments
+  "ARG",
+  # pylint
+  "PL",
+  # tidy
+  "TID",
+  # isort
+  "I",
+  # pep8-naming
+  "N",
+  # pyupgrade
+  "UP",
 ]
 ignore = [
-    # variable in function should be lowercase
-    "N806",
-    # may cause conflicts with ruff formatter
-    "E501",
-    "W191",
+  # variable in function should be lowercase
+  "N806",
+  # may cause conflicts with ruff formatter
+  "E501",
+  "W191",
 ]
 
 [tool.ruff.format]
