--- a/pixi.toml
+++ b/pixi.toml
@@ -94,4 +94,4 @@ py312 = ["py312", "test", "np2"]
 lint = { features = ["lint"], no-default-feature = true }
 
 [target.osx-arm64.dependencies]
-libgfortran5 = ">=14"
+libgfortran5 = ">=14" # https://github.com/prefix-dev/pixi/issues/3479
