--- a/pixi.toml
+++ b/pixi.toml
@@ -8,15 +8,13 @@ platforms = ["osx-arm64", "osx-64", "linux-64", "linux-aarch64", "win-64"]
 postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."
 
 [dependencies]
-python = ">=3.8"
-numpy = ">=1,<3"
-
-[host-dependencies]
+python = ">=3.10"
 pip = "*"
 hatchling = "*"
+numpy = ">=1,<3"
 
 [feature.test.dependencies]
-lightgbm = ">=3.2,<4.7"
+lightgbm = ">=3.3,<4.7"
 scikit-learn = ">=1.1,<1.6"
 pytest = ">=7.0"
 pytest-md = "*"
@@ -27,8 +25,6 @@ pandas-stubs = "*"
 [feature.test.tasks]
 test = "pytest"
 
-[feature.lgbm32.dependencies]
-lightgbm = ">=3.2,<3.3"
 [feature.lgbm33.dependencies]
 lightgbm = ">=3.3,<3.4"
 [feature.lgbm40.dependencies]
@@ -55,16 +51,16 @@ scikit-learn = ">=1.5,<1.6"
 numpy = "1.*"
 [feature.np2.dependencies]
 numpy = "2.*"
-[feature.py38.dependencies]
-python = ">=3.8,<3.9"
-[feature.py39.dependencies]
-python = ">=3.9,<3.10"
 [feature.py310.dependencies]
-python = ">=3.10,<3.11"
+python = "3.10.*"
 [feature.py311.dependencies]
-python = ">=3.11,<3.12"
+python = "3.11.*"
 [feature.py312.dependencies]
-python = ">=3.12,<3.13"
+python = "3.12.*"
+[feature.py313.dependencies]
+python = "3.13.*"
+# [feature.py314.dependencies]
+# python = "3.14.*"
 
 [feature.lint.dependencies]
 pre-commit = "*"
@@ -77,23 +73,22 @@ pre-commit-run = "pre-commit run -a"
 
 [environments]
 default = ["test"]
-skl11 = ["py38", "skl11", "test", "np1"]
-skl12 = ["py38", "skl12", "test", "np1"]
-skl13 = ["py38", "skl13", "test", "np1"]
-skl14 = ["py39", "skl14", "test", "np1"]
-skl15 = ["py39", "skl15", "test", "np2"]
-lgbm32 = ["py38", "lgbm32", "test", "np1"]
-lgbm33 = ["py38", "lgbm33", "test", "np1"]
-lgbm40 = ["py38", "lgbm40", "test", "np1"]
-lgbm41 = ["py38", "lgbm41", "test", "np1"]
-lgbm42 = ["py38", "lgbm42", "test", "np1"]
-lgbm43 = ["py38", "lgbm43", "test", "np1"]
+skl11 = ["py310", "skl11", "test", "np1"]
+skl12 = ["py310", "skl12", "test", "np1"]
+skl13 = ["py310", "skl13", "test", "np1"]
+skl14 = ["py310", "skl14", "test", "np1"]
+skl15 = ["py310", "skl15", "test", "np2"]
+lgbm33 = ["py310", "lgbm33", "test", "np1"]
+lgbm40 = ["py310", "lgbm40", "test", "np1"]
+lgbm41 = ["py310", "lgbm41", "test", "np1"]
+lgbm42 = ["py310", "lgbm42", "test", "np1"]
+lgbm43 = ["py310", "lgbm43", "test", "np1"]
 lgbm46 = ["py310", "lgbm46", "test", "np1"]
-py38 = ["py38", "test", "np1"]
-py39 = ["py39", "test", "np1"]
 py310 = ["py310", "test", "np1"]
 py311 = ["py311", "test", "np1"]
 py312 = ["py312", "test", "np2"]
+py313 = ["py313", "test", "np2"]
+# py314 = ["py314", "test", "np2"]
 lint = { features = ["lint"], no-default-feature = true }
 
 [target.osx-arm64.dependencies]
