--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,17 +22,16 @@ jobs:
           - skl13
           - skl14
           - skl15
-          - lgbm32
           - lgbm33
           - lgbm40
           - lgbm41
           - lgbm42
           - lgbm43
-          - py38
-          - py39
+          - lgbm46
           - py310
           - py311
           - py312
+          - py313
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up pixi
@@ -56,6 +55,6 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Set up pixi
         uses: prefix-dev/setup-pixi@19eac09b398e3d0c747adc7921926a6d802df4da # v0.8.8
-      - uses: quantco/pre-commit-conda@87cdb18304b3743b2304b03ccfd172284ccabbc3 # v1.0.2
         with:
-          python-version: "3.8"
+          environments: lint default
+      - run: pixi run -e lint pre-commit-run
