--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,24 @@ build-backend = "hatchling.build"
 [project]
 name = "slim-trees"
 description = "A python package for efficient pickling of ML models."
-version = "0.2.14"
+version = "0.2.15"
 readme = "README.md"
 license = { file = "LICENSE" }
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 authors = [{ name = "Pavel Zwerschke", email = "pavel.zwerschke@quantco.com" }]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+  "Programming Language :: Python :: 3.14",
 ]
+
 dependencies = ["numpy >=1,<3"]
 
 [project.optional-dependencies]
-lightgbm = ["lightgbm >=3.2,<4.4"]
+lightgbm = ["lightgbm >=3.3,<4.7"]
 scikit-learn = ["scikit-learn >=1.1.0,<1.6"]
 
 [project.urls]
@@ -32,7 +33,7 @@ include = ["/slim_trees"]
 
 [tool.ruff]
 line-length = 88
-target-version = "py38"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = [
@@ -68,6 +69,7 @@ ignore = [
   # may cause conflicts with ruff formatter
   "E501",
   "W191",
+  "PLC0415",
 ]
 
 [tool.ruff.format]
@@ -75,7 +77,7 @@ quote-style = "double"
 indent-style = "space"
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.10"
 no_implicit_optional = true
 check_untyped_defs = true
 
